# Learn_Python_2025_Bot

./: .gitignore  config.py  exceptions.py  main.py  pyproject.toml  setting.py  test.py
app/: handlers.py  keyboards.py  weather.py
app/database/: models.py  requests.py  users.py
