[tool.poetry]
name = "learn-python-2025-bot"
version = "0.1.0"
description = ""
authors = ["Alex_K <skiselev94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.18.0"
geopy = "^2.4.1"
sqlalchemy = "^2.0.38"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
